--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "test",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist && webpack"
+    "build": "rm -rf dist && webpack",
+    "start": "webpack-dev-server --port 3000"
   },
   "dependencies": {
     "@angular/common": "^2.0.0",
@@ -25,6 +26,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "typescript": "2.0.2",
-    "webpack": "2.1.0-beta.22"
+    "webpack": "^2.1.0-beta.22",
+    "webpack-dev-server": "^1.16.2"
   }
 }
